@@ -13,29 +13,29 @@
  *******************************************************************************/
 package org.eclipse.core.runtime.preferences;
 
-import java.util.*;
+import java.util.Objects;
+import java.util.Set;
 import org.eclipse.core.internal.preferences.PrefsMessages;
 import org.eclipse.osgi.util.NLS;
 
 /**
- * The preference store implementation that uses OSGi preference node as an enclosed storage.
+ * The preference store implementation that uses OSGi preference node as an
+ * enclosed storage.
  *
  * @see IEclipsePreferences
  *
  * @since 3.8
- *
  */
 public final class OsgiPreferenceMetadataStore implements IPreferenceMetadataStore {
 
-	private static final Set<Class<?>> CLASSES = Collections.unmodifiableSet(//
-			new HashSet<>(Arrays.asList(//
-					Boolean.class, //
-					byte[].class, //
-					Double.class, //
-					Float.class, //
-					Integer.class, //
-					Long.class, //
-					String.class)));
+	private static final Set<Class<?>> CLASSES = Set.of(//
+			Boolean.class, //
+			byte[].class, //
+			Double.class, //
+			Float.class, //
+			Integer.class, //
+			Long.class, //
+			String.class);
 
 	private final IEclipsePreferences preferences;
 
@@ -59,19 +59,19 @@ public final class OsgiPreferenceMetadataStore implements IPreferenceMetadataSto
 		String identifer = preference.identifer();
 		V defaultValue = preference.defaultValue();
 		if (String.class.equals(valueClass)) {
-			return valueClass.cast(preferences.get(identifer, String.class.cast(defaultValue)));
+			return valueClass.cast(preferences.get(identifer, (String) defaultValue));
 		} else if (Boolean.class.equals(valueClass)) {
-			return valueClass.cast(preferences.getBoolean(identifer, Boolean.class.cast(defaultValue)));
+			return valueClass.cast(preferences.getBoolean(identifer, (Boolean) defaultValue));
 		} else if (byte[].class.equals(valueClass)) {
-			return valueClass.cast(preferences.getByteArray(identifer, byte[].class.cast(defaultValue)));
+			return valueClass.cast(preferences.getByteArray(identifer, (byte[]) defaultValue));
 		} else if (Double.class.equals(valueClass)) {
-			return valueClass.cast(preferences.getDouble(identifer, Double.class.cast(defaultValue)));
+			return valueClass.cast(preferences.getDouble(identifer, (Double) defaultValue));
 		} else if (Float.class.equals(valueClass)) {
-			return valueClass.cast(preferences.getFloat(identifer, Float.class.cast(defaultValue)));
+			return valueClass.cast(preferences.getFloat(identifer, (Float) defaultValue));
 		} else if (Integer.class.equals(valueClass)) {
-			return valueClass.cast(preferences.getInt(identifer, Integer.class.cast(defaultValue)));
+			return valueClass.cast(preferences.getInt(identifer, (Integer) defaultValue));
 		} else if (Long.class.equals(valueClass)) {
-			return valueClass.cast(preferences.getLong(identifer, Long.class.cast(defaultValue)));
+			return valueClass.cast(preferences.getLong(identifer, (Long) defaultValue));
 		}
 		String message = PrefsMessages.PreferenceStorage_e_load_unsupported;
 		throw new UnsupportedOperationException(NLS.bind(message, preference, valueClass));
@@ -82,19 +82,19 @@ public final class OsgiPreferenceMetadataStore implements IPreferenceMetadataSto
 		Class<V> valueClass = preference.valueClass();
 		String identifer = preference.identifer();
 		if (String.class.equals(valueClass)) {
-			preferences.put(identifer, String.class.cast(value));
+			preferences.put(identifer, (String) value);
 		} else if (Boolean.class.equals(valueClass)) {
-			preferences.putBoolean(identifer, Boolean.class.cast(value));
+			preferences.putBoolean(identifer, (Boolean) value);
 		} else if (byte[].class.equals(valueClass)) {
-			preferences.putByteArray(identifer, byte[].class.cast(value));
+			preferences.putByteArray(identifer, (byte[]) value);
 		} else if (Double.class.equals(valueClass)) {
-			preferences.putDouble(identifer, Double.class.cast(value));
+			preferences.putDouble(identifer, (Double) value);
 		} else if (Float.class.equals(valueClass)) {
-			preferences.putFloat(identifer, Float.class.cast(value));
+			preferences.putFloat(identifer, (Float) value);
 		} else if (Integer.class.equals(valueClass)) {
-			preferences.putInt(identifer, Integer.class.cast(value));
+			preferences.putInt(identifer, (Integer) value);
 		} else if (Long.class.equals(valueClass)) {
-			preferences.putLong(identifer, Long.class.cast(value));
+			preferences.putLong(identifer, (Long) value);
 		} else {
 			String message = PrefsMessages.PreferenceStorage_e_save_unsupported;
 			throw new UnsupportedOperationException(NLS.bind(message, preference, valueClass));
